--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,10 +14,10 @@
     "dayjs": "^1.11.18",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.548.0",
-    "next": "16.0.1",
-    "react": "19.2.0",
+    "next": "^16.0.10",
+    "react": "^19.2.3",
     "react-chartjs-2": "^5.3.1",
-    "react-dom": "19.2.0",
+    "react-dom": "^19.2.3",
     "tailwind-merge": "^3.3.1",
     "uuid": "^13.0.0",
     "zustand": "^5.0.8"
